src/style/App.css
/* ... */
#incorrect-user-text{
  font-size: 0.5rem;
  margin-top: 5px;
}

#incorrect-user-text-span{
  color: rgb(135, 135, 255);
  font-weight: bold;
  cursor: pointer;
}

#error-page-conatiner{
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  height: 100vh;
  width: 100vw;
  text-align: center;
}

#error-404{
  font-size: 4rem;
}

.error-text-2{
  margin-top: 30px;
}

#error-text-span{
  color: rgb(90, 90, 255);
  cursor: pointer;
}

.zola-registry-embed{
  width: 500px;
}

#widget-container{
  width: 90%;
  margin-top: -160px;
  display: flex;
  justify-content: center;
  overflow: hidden;
  margin-bottom: 100px;
}

.subsection-container{
  width: 100vw;
  margin: 0;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  margin-top: 25px;
  
}

#zola-registry-iframe-4244808250834{
  background-color: red;
}

